--- a/recruiter-portal/package.json
+++ b/recruiter-portal/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.17",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-input-mask": "^2.0.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^4.0.3",
     "react-select": "^5.7.0",
